fixed alignment

--- a/shellfish-ui/style/icons.css
+++ b/shellfish-ui/style/icons.css
@@ -31,7 +31,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     display: inline-block;
     text-align: center;
     font-weight: 100;
-    vertical-align: middle;
+    vertical-align: text-top;
 }
 
 /* animate the spinners */
